# cpp-katana

./: 32_text_input_and_clipboard_handling.cpp  Button.cpp  Button.h  CMakeLists.txt  CluesGraphicsObject.cpp  CluesGraphicsObject.h  Coordinate.cpp  Coordinate.h  Grid.cpp  Grid.h  GridGraphicsObject.cpp  GridGraphicsObject.h  LTexture.cpp  LTexture.h  Legend.cpp  Legend.h  LogicManager.cpp  LogicManager.h  NumbersTextures.cpp  NumbersTextures.h  ObjectManager.cpp  ObjectManager.h  Timer.cpp  Timer.h  UIGraphicsObject.cpp  UIGraphicsObject.h  UnitTest.cpp  Utilities.cpp  Utilities.h  Vector2.cpp  Vector2.h  main.cpp  statics.h
CMakeFinds/: FindSDL2.cmake
include/game/: Controller.h  GridField.h
include/game/logic/: Clues.h  Game.h  Grid.h
include/graphics/: GameArea.h  GameWindow.h
include/tests/: Test.h
resources/: small.pic
src/game/: Controller.cpp
src/game/logic/: Clues.cpp  Game.cpp  Grid.cpp
src/graphics/: GameArea.cpp  GameWindow.cpp
src/tests/: Test.cpp  TestGrid.cpp  runTests.cpp
